
syntax = "proto3";



message TransactionRes {
  int64 id = 1;
  int64 account_id = 2;
  int64 amount = 3;
  bool deposit = 4;
  string timestamp = 5;
  string branch_id = 6;
}

message GetTransactionsRequest {
  int64 account_id = 1;
  string branch_id = 2;
}

message GetTransactionsResponse {
  repeated TransactionRes transactions = 1;
}

service TransactionService {

  rpc GetTransactions (GetTransactionsRequest) returns (GetTransactionsResponse);
}

message Accountres {
  int64 id = 1;
  int64 user_id = 2;
  int64 balance = 3;
  string name = 4;
  string branch_id = 5;
}
//account count
message GetAccountNumberRequest{
  int64 userId=1;
}
message GetAccountNumberResponse{
  int32 count=1;
}
//Accounts fetch
message GetAccountRequest {
  int64 userId = 1;
}


message GetAccountResponse {
  repeated Accountres account = 1;
}

//Rollback service

message RollbackRequest{
  string date = 1;
  string branchId = 2;
  bool allBranches = 3;
}
message RollbackResponse{
  bool status = 1;
}
service CustomerAccountService {
  rpc GetAccount (GetAccountRequest) returns (GetAccountResponse);
  rpc GetAccountCount (GetAccountNumberRequest) returns (GetAccountNumberResponse);
  
}
service AdminRollBackService{
  rpc Rollback (RollbackRequest) returns (RollbackResponse);
}



